--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.2.1",
     "d3": "^4.12.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
